Update viewtify.